# DocumentFeeder

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUDIT.md  CONNECTORS.md  FRONTEND.md  LICENSING.md  OPERATIONS.md  ROADMAP.md  STORAGE.md
docs/adr/: 0001-pipeline-first.md
migrations/: env.py
migrations/versions/: 0001_create_document_jobs.py  0002_add_processing_queue.py  0003_add_input_channels.py  0004_add_target_systems.py  0005_add_delivery_routing.py  0006_add_job_events.py  0007_add_users_and_sessions.py  0008_add_audit_events.py  0009_add_worker_heartbeats.py  0010_add_system_settings.py  0011_add_http_connector_settings.py  0012_add_graph_connector.py  0013_add_audit_hash_chain.py
src/document_core/: __init__.py  api.py  auth.py  config.py  connector_registry.py  connectors.py  file_validation.py  licensing.py  malware.py  mock_target.py  models.py  pipeline.py  processing.py  secrets.py  store.py  worker.py
src/document_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/document_core/static/: app.css  app.js  index.html
tests/: conftest.py  test_api_e2e.py  test_audit_store.py  test_auth.py  test_classification_contract.py  test_connector_registry.py  test_extraction_contract.py  test_http_connector.py  test_licensing.py  test_malware_scanning.py  test_microsoft_graph_connector.py  test_pdf_blackbox.py  test_pdf_processing.py  test_pipeline.py  test_postgres_integration.py  test_processing.py  test_secrets.py  test_store.py  test_worker_flow.py
tools/: license_tool.py
