[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-core"
version = "0.1.0"
description = "Extensible document ingestion and processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pypdf>=5.9,<7",
  "pypdfium2>=4.30,<6",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.13", "Pillow>=10.4"]
dev = ["httpx>=0.27", "pytest>=8.3", "reportlab>=4.2", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
